@@ -1,6 +1,7 @@
 2010-04-30 Dusan Jocic <dusanjocic@msn.com>
 	* [Engine] Consolidation of engine and renderer convars
 	* [Network] Fixed qport in case of potentially overflowing signed short
+	* [Client] Splitted client.hpp into clientPublic.hpp and clientLocal.hpp
 
 2010-04-29 Dusan Jocic <dusanjocic@msn.com>
 	* [Engine] Zero qtime_t struct if localtime() fails
